kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attendance
  labels:
    name: attendance
